kubernetes/apps/motioneye/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: motioneye
  namespace: apps
spec:
  selector:
    app: motioneye
  ports:
  - port: 8765
    targetPort: 8765
  type: ClusterIP
