kubernetes/apps/motioneye/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
  - host: home-cam.taptappers.club
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motioneye
            port:
              number: 8765
  tls:
  - hosts:
    - home-cam.taptappers.club
    secretName: motioneye-tls-secret
